# SortLib

./: CMakeLists.txt  README.md  test.c
include/: sort.h
src/: bubbleSort.c  insertionSort.c  mergeSort.c  quickSort.c  radixSort.c  selectionSort.c
